improve response object
