# controllers/stock_rating_controller.go
@@ -18,31 +18,31 @@ func NewStockController(serv *services.StockService)*StockController{
 // swagger:route GET /stock stock getStocks
 //GetStocks returns all stock
 //responses:
-//	200: Response
-//  400: Response
-//  500: Response
+//	200: ResponseSuccess
+//  400: ResponseError
+//  500: ResponseError
 func (c *StockController) GetAll(ctx *gin.Context){
-	var response utils.Response=c.Serv.GetAll(ctx)
+	var response utils.Response=*c.Serv.GetAll(ctx)
 	ctx.IndentedJSON(http.StatusOK, response)
 }
 
 // swagger:route GET /stock/{id} stock getStock
 //GetOneStock returns one from the stock
 //responses:
-//	200: Response
-//  400: Response
-//  500: Response
+//	200: ResponseSuccess
+//  400: ResponseError
+//  500: ResponseError
 func (c *StockController) GetOne(ctx *gin.Context){
-	var response utils.Response=c.Serv.GetOne(ctx)
+	var response utils.Response=*c.Serv.GetOne(ctx)
 	ctx.IndentedJSON(http.StatusOK, response)
 }
 
 // swagger:route POST /stock stock createStock
 //CreateStock returns a success message
 //responses:
-//	202: Response
-//  400: Response
-//  500: Response
+//	202: ResponseSuccess
+//  400: ResponseError
+//  500: ResponseError
 func (c *StockController) Create(ctx *gin.Context){
 	var response utils.Response=*c.Serv.Create(ctx)
 	ctx.IndentedJSON(http.StatusOK,response)
@@ -51,9 +51,9 @@ func (c *StockController) Create(ctx *gin.Context){
 // swagger:route PUT /stock/{id} stock updateStock
 //updateStock returns a success message
 //responses:
-//	200: Response
-//  400: Response
-//  500: Response
+//	200: ResponseSuccess
+//  400: ResponseError
+//  500: ResponseError
 func (c *StockController) Update(ctx *gin.Context){
 	var response utils.Response=*c.Serv.Update(ctx)
 	ctx.IndentedJSON(http.StatusOK,response)
@@ -62,9 +62,9 @@ func (c *StockController) Update(ctx *gin.Context){
 // swagger:route DELETE /stock/{id} stock deleteStock
 //Delete returns message
 //responses:
-//	200: Response
-//  400: Response
-//  500: Response
+//	200: ResponseSuccess
+//  400: ResponseError
+//  500: ResponseError
 func (c *StockController) Delete(ctx *gin.Context){
 	var response utils.Response=*c.Serv.Delete(ctx)
 	ctx.IndentedJSON(http.StatusOK,response)
