# services/stock_rating_service.go
@@ -4,11 +4,11 @@ import (
 	"example/hello/models"
 	"example/hello/repositories"
 	"example/hello/utils"
+	"github.com/gin-gonic/gin"
 	"reflect"
 	"strconv"
 	"strings"
 	"time"
-	"github.com/gin-gonic/gin"
 )
 
 type StockService struct {
@@ -19,41 +19,57 @@ func NewStockService(repo *repositories.StockRepository) *StockService {
 	return &StockService{Repo: repo}
 }
 
-func (s *StockService) GetAll(ctx *gin.Context) utils.Response {
-	var response utils.Response;
-	filters,sortBy,order,limit,offset:=GetFilters(ctx)
-	stocks, totalRecords, err := s.Repo.GetAll(filters,sortBy,order, limit, offset)
+func (s *StockService) GetAll(ctx *gin.Context) *utils.Response {
+	var response utils.Response
+	filters, sortBy, order, limit, offset := GetFilters(ctx)
+	stocks, totalRecords, err := s.Repo.GetAll(filters, sortBy, order, limit, offset)
 
 	if err != nil {
-		response.Status = "500"
-		response.Error.Code = "DATABASE_ERROR"
-		response.Error.Details = err.Error()
-		return response
+		response = utils.Response{
+			Status: "404",
+			Error: utils.ResponseError{
+				Code:    "NOT_FOUND",
+				Details: err.Error(),
+			},
+		}
+		return &response
 	}
-	response.Status = "200"
-	response.Data = stocks
-	response.Meta = map[string]interface{}{
-		"limit":  limit,
-		"offset": offset,
-		"totalRecords": totalRecords,
+	response = utils.Response{
+		Status: "200",
+		Success: utils.ResponseSuccess{
+			Data:   stocks,
+			Meta: map[string]interface{}{
+				"limit":        limit,
+				"offset":       offset,
+				"totalRecords": totalRecords,
+			},
+		},
 	}
-	return response
+	return &response
 
 }
 
-func (s *StockService) GetOne(ctx *gin.Context) utils.Response {
+func (s *StockService) GetOne(ctx *gin.Context) *utils.Response {
 	response := utils.Response{}
 	stock, err := s.Repo.GetOne(ctx.Param("id"))
 
 	if err != nil {
-		response.Status = "404"
-		response.Error.Code = "NOT_FOUND"
-		response.Error.Details = err.Error()
-		return response
+		response = utils.Response{
+			Status: "404",
+			Error: utils.ResponseError{
+				Code:    "NOT_FOUND",
+				Details: err.Error(),
+			},
+		}
+		return &response
 	}
-	response.Status = "200"
-	response.Data = stock
-	return response
+	response = utils.Response{
+		Status: "200",
+		Success: utils.ResponseSuccess{
+			Data:   stock,
+		},
+	}
+	return &response
 }
 
 func (s *StockService) Create(ctx *gin.Context) *utils.Response {
@@ -63,16 +79,16 @@ func (s *StockService) Create(ctx *gin.Context) *utils.Response {
 	if decodeResponse != nil {
 		return decodeResponse
 	}
-	if stock.Time==nil {
-		stock.Time=new(time.Time)
+	if stock.Time == nil {
+		stock.Time = new(time.Time)
 	}
 
 	err := s.Repo.Create(stock)
 	if err != nil {
 		response = utils.Response{
-			Status: "500",
+			Status: "400",
 			Error: utils.ResponseError{
-				Code:    "DATABASE_ERROR",
+				Code:    "BAD_REQUEST",
 				Details: err.Error(),
 			},
 		}
@@ -80,7 +96,9 @@ func (s *StockService) Create(ctx *gin.Context) *utils.Response {
 	}
 	response = utils.Response{
 		Status: "202",
-		Data:   "Creado satisfactoriamente",
+		Success: utils.ResponseSuccess{
+			Data:   "Creado satisfactoriamente",
+		},
 	}
 
 	return &response
@@ -89,7 +107,7 @@ func (s *StockService) Create(ctx *gin.Context) *utils.Response {
 func (s *StockService) Update(ctx *gin.Context) *utils.Response {
 	var response *utils.Response
 	newStock := &models.StockRequestUpdate{}
-	id:=ctx.Param("id")
+	id := ctx.Param("id")
 
 	newStock.Body, response = DecodeJson(ctx)
 	if response != nil {
@@ -99,53 +117,53 @@ func (s *StockService) Update(ctx *gin.Context) *utils.Response {
 	stock, err := s.Repo.GetOne(id)
 	if err != nil {
 		response = &utils.Response{
-				Status: "404",
-				Error: utils.ResponseError{
-					Code:    "NOT_FOUND",
-					Details: err.Error(),
-				},
+			Status: "400",
+			Error: utils.ResponseError{
+				Code:    "BAD_REQUEST",
+				Details: err.Error(),
+			},
 		}
 		return response
 	}
 
 	UpdateValues(stock, newStock)
 
-	err = s.Repo.Update(id,&stock.Stock)
+	err = s.Repo.Update(id, &stock.Stock)
 	if err != nil {
 		return &utils.Response{
-				Status: "500",
-				Error: utils.ResponseError{
-					Code:    "UPDATE_ERROR",
-					Details: err.Error(),
-				},
+			Status: "400",
+			Error: utils.ResponseError{
+				Code:    "BAD_REQUEST",
+				Details: err.Error(),
+			},
 		}
 	}
 
 	return &utils.Response{
 
-			Status: "200",
-			Data:  "Actualizado Correctamente",
-
+		Status: "200",
+		Success: utils.ResponseSuccess{
+			Data:   "Actualizado Correctamente",
+		},
 	}
 
 }
 
-
-func (s *StockService) Delete(ctx *gin.Context) *utils.Response{
+func (s *StockService) Delete(ctx *gin.Context) *utils.Response {
 	var response utils.Response
-	id:=ctx.Param("id")
+	id := ctx.Param("id")
 	_, err := s.Repo.GetOne(id)
 	if err != nil {
 		response = utils.Response{
-				Status: "404",
-				Error: utils.ResponseError{
-					Code:    "NOT_FOUND",
-					Details: err.Error(),
-				},
+			Status: "404",
+			Error: utils.ResponseError{
+				Code:    "NOT_FOUND",
+				Details: err.Error(),
+			},
 		}
 		return &response
 	}
-	err=s.Repo.Delete(id)
+	err = s.Repo.Delete(id)
 	if err != nil {
 		response = utils.Response{
 			Status: "400",
@@ -154,11 +172,13 @@ func (s *StockService) Delete(ctx *gin.Context) *utils.Response{
 				Details: err.Error(),
 			},
 		}
-		return &response 
+		return &response
 	}
 	response = utils.Response{
 		Status: "200",
-		Data:   "eliminado satisfactoriamente",
+		Success: utils.ResponseSuccess{
+			Data:   "eliminado satisfactoriamente",
+		},
 	}
 
 	return &response
@@ -176,26 +196,26 @@ func DecodeJson(ctx *gin.Context) (*models.Stock, *utils.Response) {
 				Details: err.Error(),
 			},
 		}
-		return nil,&response
+		return nil, &response
 	}
 	return &stockRating, nil
 }
 
-func UpdateValues(stockRating *models.StockResponseGet , newStockRating *models.StockRequestUpdate) {
+func UpdateValues(stockRating *models.StockResponseGet, newStockRating *models.StockRequestUpdate) {
 	v1 := reflect.ValueOf(&stockRating.Stock).Elem()
 	V2 := reflect.ValueOf(newStockRating.Body).Elem()
 
-	for i :=0; i <v1.NumField(); i++{
-		field1:= v1.Field(i)
-		field2:= V2.Field(i)
+	for i := 0; i < v1.NumField(); i++ {
+		field1 := v1.Field(i)
+		field2 := V2.Field(i)
 
-		if field1.CanSet() && !reflect.DeepEqual(field1.Interface(), field2.Interface()){
+		if field1.CanSet() && !reflect.DeepEqual(field1.Interface(), field2.Interface()) {
 			field1.Set(field2)
 		}
 	}
 }
 
-func GetFilters(ctx *gin.Context)(map[string]string, []string, []string, int, int){
+func GetFilters(ctx *gin.Context) (map[string]string, []string, []string, int, int) {
 	filters := map[string]string{}
 	for _, key := range []string{"ticker", "company", "action", "brokerage", "rating_from", "rating_to"} {
 		if value := ctx.Query(key); value != "" {
@@ -204,15 +224,15 @@ func GetFilters(ctx *gin.Context)(map[string]string, []string, []string, int, in
 	}
 
 	sortBy := strings.Split(ctx.DefaultQuery("sortBy", "time"), ",")
-	order := strings.Split(ctx.DefaultQuery("order", "desc"), ",") 
+	order := strings.Split(ctx.DefaultQuery("order", "desc"), ",")
 	limit, err := strconv.Atoi(ctx.DefaultQuery("limit", "10"))
 	if err != nil || limit <= 0 {
 		limit = 10
 	}
 
 	offset, err := strconv.Atoi(ctx.DefaultQuery("offset", "0"))
-	if err != nil || offset < 0{
-		offset =0
+	if err != nil || offset < 0 {
+		offset = 0
 	}
-	return filters,sortBy,order, limit, offset
+	return filters, sortBy, order, limit, offset
 }
