# utils/responses.go
@@ -7,8 +7,7 @@ package utils
 // swagger:response Response
 type Response struct{
 	Status string `json:"status"`
-	Data any `json:"data,omitempty"`
-	Meta any `json:"meta,omitempty"`
+	Success ResponseSuccess `json:"success,omitempty"`
 	Error ResponseError`json:"error,omitempty"`
 }
 
@@ -17,3 +16,7 @@ type ResponseError struct{
 	Details string `json:"details,omitempty"`
 }
 
+type ResponseSuccess struct{
+	Data any `json:"data,omitempty"`
+	Meta any `json:"meta,omitempty"`
+}
